jenkins/ASM/asm-base/istio-ingressgateway-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    release: istio
  name: ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: ingress-gateway-cert
        mode: SIMPLE
    - hosts:
        - "*"
      port:
        name: http-redirect
        number: 80
        protocol: HTTP2
      tls:
        httpsRedirect: true
